--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "application-name",
+  "name": "grunt-test",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
     "express": "~3.2.6",
     "jade": "~0.31.2"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-watch": "~0.4.4",
+    "grunt-contrib-compass": "~0.3.0"
   }
 }
